--- a/minegnk.html
+++ b/minegnk.html
@@ -43,21 +43,28 @@
     .ticker-tip{
       position:fixed;
       z-index:9999;
-      max-width:min(360px, calc(100vw - 24px));
-      padding:10px 12px;
-      border-radius:12px;
-      background:rgba(15,23,42,.96);
-      color:#f8fafc;
-      border:1px solid rgba(148,163,184,.22);
-      box-shadow:0 18px 40px rgba(15,23,42,.28);
-      font-size:.98em;
-      line-height:1.35;
+      max-width:min(320px, calc(100vw - 24px));
+      padding:14px 16px;
+      border-radius:14px;
+      background:linear-gradient(145deg, rgba(255,255,255,0.98) 0%, rgba(248,250,252,0.98) 100%);
+      color:#1e293b;
+      border:1px solid rgba(226,232,240,0.9);
+      box-shadow:
+        0 4px 6px -1px rgba(0,0,0,0.07),
+        0 10px 20px -5px rgba(0,0,0,0.1),
+        0 25px 50px -12px rgba(0,0,0,0.12);
+      font-size:.92em;
+      font-weight:500;
+      line-height:1.55;
+      letter-spacing:-0.01em;
       pointer-events:none;
       opacity:0;
-      transform:translateY(-4px);
-      transition:opacity .12s ease, transform .12s ease;
+      transform:translateY(6px) scale(0.97);
+      transition:opacity .2s cubic-bezier(0.16,1,0.3,1), transform .2s cubic-bezier(0.16,1,0.3,1);
+      backdrop-filter:blur(16px);
+      -webkit-backdrop-filter:blur(16px);
     }
-    .ticker-tip.is-visible{opacity:1;transform:translateY(0)}
+    .ticker-tip.is-visible{opacity:1;transform:translateY(0) scale(1)}
     .status-pill{display:inline-flex;align-items:center;gap:8px;padding:3px 10px;border-radius:999px;font-weight:900;font-size:.92em;border:1px solid rgba(226,232,240,.95);background:rgba(255,255,255,.92);color:var(--text)}
     .status-pill:before{content:"";width:8px;height:8px;border-radius:999px;background:#94a3b8;box-shadow:0 0 0 3px rgba(148,163,184,.18)}
     .status-pill--ok:before{background:var(--ok);box-shadow:0 0 0 3px rgba(22,163,74,.18)}
@@ -161,6 +168,7 @@
     .pricing-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px;margin-top:26px}
     .pricing-card{background:rgba(255,255,255,.92);border:1px solid rgba(226,232,240,.95);border-radius:var(--r);padding:22px;box-shadow:var(--shadow-sm);transition:transform .18s ease,box-shadow .18s ease,border-color .18s ease}
     .pricing-card:hover{border-color:rgba(37,99,235,.55);box-shadow:var(--shadow);transform:translateY(-3px)}
+    .pricing-card .btn{width:100%;margin-top:14px}
     .price{font-size:2.05em;font-weight:950;color:var(--brand);margin:12px 0;letter-spacing:-.02em}
     .price-unit{font-size:.6em;color:#64748b;font-weight:800}
 
@@ -403,24 +411,28 @@
           <div class="price">$0.99<span class="price-unit">/GPU/hour</span></div>
           <p><strong>$5,782 per month</strong></p>
           <p>Month-to-month contract</p>
+          <a href="https://2fulgz.share-eu1.hsforms.com/2eP1VC-7DSVi8TVLHOSS4ew?gpu_type=8x+A100" class="btn btn-primary" target="_blank" rel="noopener">Rent A100</a>
         </div>
         <div class="pricing-card">
           <h3>8x H100 Server</h3>
           <div class="price">$1.70<span class="price-unit">/GPU/hour</span></div>
           <p><strong>$9,928 per month</strong></p>
           <p>Month-to-month contract</p>
+          <a href="https://2fulgz.share-eu1.hsforms.com/2eP1VC-7DSVi8TVLHOSS4ew?gpu_type=8x+H100" class="btn btn-primary" target="_blank" rel="noopener">Rent H100</a>
         </div>
         <div class="pricing-card">
           <h3>8x H200 Server</h3>
           <div class="price">$2.30<span class="price-unit">/GPU/hour</span></div>
           <p><strong>$13,432 per month</strong></p>
           <p>Month-to-month contract</p>
+          <a href="https://2fulgz.share-eu1.hsforms.com/2eP1VC-7DSVi8TVLHOSS4ew?gpu_type=8x+H200" class="btn btn-primary" target="_blank" rel="noopener">Rent H200</a>
         </div>
         <div class="pricing-card">
           <h3>8x B200 Server</h3>
           <div class="price">$3.50<span class="price-unit">/GPU/hour</span></div>
           <p><strong>$17,640 per month</strong></p>
           <p>Month-to-month contract</p>
+          <a href="https://2fulgz.share-eu1.hsforms.com/2eP1VC-7DSVi8TVLHOSS4ew?gpu_type=8x+B200" class="btn btn-primary" target="_blank" rel="noopener">Rent B200</a>
         </div>
       </div>
       <p><strong>Discounts:</strong> Volume discounts available from 10+ servers.</p>
